metadata/force-app/main/default/objects/CustomName_TXKYT__c/CustomName_TXKYT__c.object-meta.xml
<CustomObject>
    <description>Description_PwMpY</description>
    <label>CustomLabel_UVKFl</label>
    <nameField>
        <label>CustomLabel_UVKFl</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_UVKFls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>