metadata/force-app/main/default/objects/CustomName_TXKYT__c/fields/CustomField_DlfbD__c.field-meta.xml
<CustomField>
    <fullName>CustomField_DlfbD__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldsPhYl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>