metadata/force-app/main/default/objects/CustomName_TXKYT__c/fields/CustomField_fjOGm__c.field-meta.xml
<CustomField>
    <fullName>CustomField_fjOGm__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldFtLUT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>